Change project name

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /OrderBookProRata/obj
 /OrderBookTest/bin/Debug/net6.0
 /OrderBookTest/obj
+/OrderBookPriceTimePriority/bin/Debug/net6.0
+/OrderBookPriceTimePriority/obj
